<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="77dp"
        android:onClick="calculateTip10"
        android:text="@string/ten_percentage" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button10"
        android:layout_centerHorizontal="true"
        android:onClick="calculateTip15"
        android:text="@string/fifteen_percentage" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button15"
        android:layout_alignBottom="@+id/button15"
        android:layout_alignParentRight="true"
        android:onClick="calculateTip20"
        android:layout_marginRight="21dp"
        
        android:text="@string/twenty_percentage" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button15"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hint_amount" >        

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textTipIs"
        android:layout_alignBottom="@+id/textTipIs"
        android:layout_alignLeft="@+id/button15"
        android:text="@string/tip_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textTipIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editAmount"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:text="@string/tip_is"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>